engine-net-2/examples/Errors/ProcedureParametersInNumberMismatch.grs
new graph "Rules.grg"

exec { (d:double)=p() }

quit
